--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "resume-react-app",
+  "name": "portfolio-react-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://vrushi007.github.io/resume",
+  "homepage": "https://vrushi007.github.io/portfolio-website",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
