--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,50 +1,50 @@
 {
-  "name": "Vrushabh Rajaghatta - Resume",
-  "short_name": "VR Resume",
-  "description": "Professional resume of Vrushabh Rajaghatta - Senior Software Developer",
-  "start_url": "/resume/",
+  "name": "Vrushabh Rajaghatta - Portfolio website",
+  "short_name": "VR Portfolio website",
+  "description": "Professional portfolio of Vrushabh Rajaghatta - Senior Software Developer",
+  "start_url": "/portfolio/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#2563eb",
   "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "/resume/icons/icon-72x72.png",
+      "src": "/portfolio/icons/icon-72x72.png",
       "sizes": "72x72",
       "type": "image/png"
     },
     {
-      "src": "/resume/icons/icon-96x96.png",
+      "src": "/portfolio/icons/icon-96x96.png",
       "sizes": "96x96",
       "type": "image/png"
     },
     {
-      "src": "/resume/icons/icon-128x128.png",
+      "src": "/portfolio/icons/icon-128x128.png",
       "sizes": "128x128",
       "type": "image/png"
     },
     {
-      "src": "/resume/icons/icon-144x144.png",
+      "src": "/portfolio/icons/icon-144x144.png",
       "sizes": "144x144",
       "type": "image/png"
     },
     {
-      "src": "/resume/icons/icon-152x152.png",
+      "src": "/portfolio/icons/icon-152x152.png",
       "sizes": "152x152",
       "type": "image/png"
     },
     {
-      "src": "/resume/icons/icon-192x192.png",
+      "src": "/portfolio/icons/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/resume/icons/icon-384x384.png",
+      "src": "/portfolio/icons/icon-384x384.png",
       "sizes": "384x384",
       "type": "image/png"
     },
     {
-      "src": "/resume/icons/icon-512x512.png",
+      "src": "/portfolio/icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
